tests/ui/error-codes/E0648.rs
#[export_name="\0foo"] //~ ERROR E0648
pub fn bar() {}

fn main() {}
